<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6D9D9"
    tools:context=".lungcancer">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/colorwhite"
        app:title="LUNGCANCER DISEASE"
        app:titleMarginStart="60dp"
        android:theme="@style/AppTheme"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:background="@drawable/lung1"
                android:orientation="vertical"
                android:layout_below="@+id/toolbar"
                android:layout_height="190dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancer"
                android:textColor="#591E1A"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cintro"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Csymptoms"
                android:textSize="25sp"
                android:textColor="#591E1A"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symptoms_list"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list1"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list2"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list3"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list4"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cdiet"
                android:textSize="25sp"
                android:textColor="#591E1A"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food1"
                android:textColor="#0E1E8A"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodexpl"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/pic2"
                    android:layout_below="@id/seafood"
                    android:layout_width="200dp"
                    android:layout_marginLeft="0dp"
                    android:background="@drawable/protein1"
                    android:orientation="horizontal"
                    android:layout_height="120dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/foodlist"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food2"
                android:textColor="#0E1E8A"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodexp2"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food3"
                android:textColor="#0E1E8A"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodexp3"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="130dp"
                android:background="@drawable/oral1"
                android:orientation="vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food4"
                android:textColor="#0E1E8A"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodexp4"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="130dp"
                android:background="@drawable/alcohol"
                android:orientation="vertical"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>