<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6D9D9"
    tools:context=".malaria">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/colorwhite"
        app:title="MALARIA DISEASE"
        app:titleMarginStart="80dp"
        android:theme="@style/AppTheme"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:background="@drawable/malaria2"
                android:orientation="vertical"
                android:layout_below="@+id/toolbar"
                android:layout_height="150dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Malaria"
                android:textColor="#591E1A"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m1"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m2"
                android:textColor="#591E1A"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m3"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="150dp">
                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="200dp"
                    android:orientation="vertical"
                    android:background="@drawable/mosq1"
                    android:layout_height="150dp"/>
                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="200dp"
                    android:orientation="vertical"
                    android:background="@drawable/mosq2"
                    android:layout_height="150dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m4"
                android:textColor="#591E1A"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m5"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m6"
                android:textColor="#591E1A"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m7"
                android:textColor="#0E1E8A"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m77"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m8"
                android:textColor="#0E1E8A"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m88"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="270dp"
            android:background="@drawable/multivitamin"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_height="110dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m11"
                android:textColor="#0E1E8A"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m11list"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="270dp"
                android:background="@drawable/carbohydates"
                android:orientation="vertical"
                android:layout_marginLeft="25dp"
                android:layout_height="110dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m9"
                android:textColor="#591E1A"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m10"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>