<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6D9D9"
    tools:context=".Goitre">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/colorwhite"
        app:title="GOITER DISEASE"
        app:titleMarginStart="90dp"
        android:theme="@style/AppTheme"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="300dp"
                android:background="@drawable/goitre"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_below="@+id/toolbar"
                android:layout_height="170dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Goiter"
                android:textColor="#591E1A"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g1"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g2"
                android:textColor="#591E1A"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g3"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g4"
                android:textColor="#591E1A"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g5"
                android:textColor="#0E1E8A"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g6"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="270dp"
                android:background="@drawable/seaweed"
                android:orientation="vertical"
                android:layout_marginLeft="25dp"
                android:layout_height="110dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g5"
                android:textColor="#0E1E8A"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g8"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="270dp"
                android:background="@drawable/fish"
                android:orientation="vertical"
                android:layout_marginLeft="25dp"
                android:layout_height="110dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g9"
                android:textColor="#0E1E8A"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g10"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="270dp"
                android:background="@drawable/yoght"
                android:orientation="vertical"
                android:layout_marginLeft="25dp"
                android:layout_height="110dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>